Add grpc server
