# app/infrastructure/persistence/grpc/handler/addressHandler.go
@@ -2,8 +2,9 @@ package handler
 
 import (
 	"context"
+	"github.com/GarinAG/gofias/domain/address/entity"
 	"github.com/GarinAG/gofias/domain/address/service"
-	address_v1 "github.com/GarinAG/gofias/interfaces/grpc/proto/v1/address"
+	addressV1 "github.com/GarinAG/gofias/infrastructure/persistence/grpc/dto/v1/address"
 	"github.com/golang/protobuf/ptypes/empty"
 	"google.golang.org/grpc"
 	"net"
@@ -23,70 +24,66 @@ func NewAddressHandler(a *service.AddressService) *AddressHandler {
 	return handler
 }
 
-func (h *AddressHandler) GetCitiesByTerm(request *address_v1.TermRequest, stream address_v1.AddressHandler_GetCitiesByTermServer) error {
+func (h *AddressHandler) GetCitiesByTerm(request *addressV1.TermRequest, stream addressV1.AddressHandler_GetCitiesByTermServer) error {
 	if request.Count == 0 {
 		request.Count = 10
 	}
 
-	cities := h.addressService.GetCitiesByTerm(request.Term, request.Count)
+	cities := h.addressService.GetCitiesByTerm(request.Term, request.Count, request.Size, request.From)
 
 	for _, city := range cities {
-		stream.Send(&address_v1.Address{
-			AoGuid:         city.AoGuid,
-			AoLevel:        strconv.Itoa(city.AoLevel),
-			FormalName:     city.FormalName,
-			ParentGuid:     city.ParentGuid,
-			ShortName:      city.ShortName,
-			PostalCode:     city.PostalCode,
-			FullName:       city.FullName,
-			FullAddress:    city.FullAddress,
-			District:       city.District,
-			DistrictType:   city.DistrictType,
-			DistrictFull:   city.DistrictFull,
-			Settlement:     city.Settlement,
-			SettlementType: city.SettlementType,
-			SettlementFull: city.SettlementFull,
-			Street:         city.Street,
-			StreetType:     city.StreetType,
-			StreetFull:     city.StreetFull,
-		})
+		stream.Send(h.convertToAddress(city))
 	}
 
 	return nil
 }
 
-func (h *AddressHandler) GetAllCities(empty *empty.Empty, stream address_v1.AddressHandler_GetAllCitiesServer) error {
+func (h *AddressHandler) GetAddressByTerm(request *addressV1.TermRequest, stream addressV1.AddressHandler_GetAddressByTermServer) error {
+	if request.Count == 0 {
+		request.Count = 10
+	}
+
+	cities := h.addressService.GetAddressByTerm(request.Term, request.Count, request.Size, request.From)
+
+	for _, city := range cities {
+		stream.Send(h.convertToAddress(city))
+	}
+
+	return nil
+}
+
+func (h *AddressHandler) GetAllCities(empty *empty.Empty, stream addressV1.AddressHandler_GetAllCitiesServer) error {
 	cities := h.addressService.GetCities()
 
 	for _, city := range cities {
-		stream.Send(&address_v1.Address{
-			AoGuid:         city.AoGuid,
-			AoLevel:        strconv.Itoa(city.AoLevel),
-			FormalName:     city.FormalName,
-			ParentGuid:     city.ParentGuid,
-			ShortName:      city.ShortName,
-			PostalCode:     city.PostalCode,
-			FullName:       city.FullName,
-			FullAddress:    city.FullAddress,
-			District:       city.District,
-			DistrictType:   city.DistrictType,
-			DistrictFull:   city.DistrictFull,
-			Settlement:     city.Settlement,
-			SettlementType: city.SettlementType,
-			SettlementFull: city.SettlementFull,
-			Street:         city.Street,
-			StreetType:     city.StreetType,
-			StreetFull:     city.StreetFull,
-		})
+		stream.Send(h.convertToAddress(city))
 	}
 
 	return nil
 }
 
-func (h *AddressHandler) GetByGuid(ctx context.Context, guid *address_v1.GuidRequest) (*address_v1.Address, error) {
+func (h *AddressHandler) GetByGuid(ctx context.Context, guid *addressV1.GuidRequest) (*addressV1.Address, error) {
 	addr := h.addressService.GetByGuid(guid.Guid)
+	result := h.convertToAddress(addr)
 
-	result := address_v1.Address{
+	return result, nil
+}
+
+func (h *AddressHandler) Serve() error {
+	listener, err := net.Listen("tcp", ":50051")
+	if err != nil {
+		return err
+	}
+
+	return h.Server.Serve(listener)
+}
+
+func (h *AddressHandler) convertToAddress(addr *entity.AddressObject) *addressV1.Address {
+	if addr == nil {
+		return nil
+	}
+
+	result := addressV1.Address{
 		AoGuid:         addr.AoGuid,
 		AoLevel:        strconv.Itoa(addr.AoLevel),
 		FormalName:     addr.FormalName,
@@ -106,14 +103,5 @@ func (h *AddressHandler) GetByGuid(ctx context.Context, guid *address_v1.GuidReq
 		StreetFull:     addr.StreetFull,
 	}
 
-	return &result, nil
-}
-
-func (h *AddressHandler) Serve() error {
-	listener, err := net.Listen("tcp", ":50051")
-	if err != nil {
-		return err
-	}
-
-	return h.Server.Serve(listener)
+	return &result
 }
