# app/infrastructure/persistence/grpc/server.go
@@ -2,47 +2,53 @@ package grpc
 
 import (
 	"context"
-	"flag"
 	"github.com/GarinAG/gofias/domain/address/service"
 	versionService "github.com/GarinAG/gofias/domain/version/service"
+	grpcHandlerAddressV1 "github.com/GarinAG/gofias/infrastructure/persistence/grpc/dto/v1/address"
 	addressHandler "github.com/GarinAG/gofias/infrastructure/persistence/grpc/handler"
 	"github.com/GarinAG/gofias/infrastructure/registry"
 	"github.com/GarinAG/gofias/interfaces"
-	grpcHandlerAddress "github.com/GarinAG/gofias/interfaces/grpc/proto/v1/address"
 	"github.com/grpc-ecosystem/grpc-gateway/runtime"
 	"google.golang.org/grpc"
+	"google.golang.org/grpc/metadata"
 	"google.golang.org/grpc/reflection"
-	"log"
 	"net"
 	"net/http"
 	"os"
 	"os/signal"
 	"sync"
+	"time"
 )
 
 type GrpcServer struct {
 	Server         *grpc.Server
 	Logger         interfaces.LoggerInterface
+	Config         interfaces.ConfigInterface
 	AddressService *service.AddressService
 	HouseService   *service.HouseImportService
 	VersionService *versionService.VersionService
 }
 
+var globalLogger interfaces.LoggerInterface
+
 func NewGrpcServer(ctn *registry.Container) *GrpcServer {
 	logger := ctn.Resolve("logger").(interfaces.LoggerInterface)
+	globalLogger = logger
+
 	defer func() {
 		if r := recover(); r != nil {
 			logger.WithFields(interfaces.LoggerFields{"error": r}).Panic("Program fatal error")
 			os.Exit(1)
 		}
 	}()
-	gserver := grpc.NewServer()
-	grpcHandlerAddress.RegisterAddressHandlerServer(gserver, addressHandler.NewAddressHandler(ctn.Resolve("addressService").(*service.AddressService)))
-	reflection.Register(gserver)
+	server := grpc.NewServer(grpc.UnaryInterceptor(serverInterceptor))
+	grpcHandlerAddressV1.RegisterAddressHandlerServer(server, addressHandler.NewAddressHandler(ctn.Resolve("addressService").(*service.AddressService)))
+	reflection.Register(server)
 
 	return &GrpcServer{
-		Server:         gserver,
+		Server:         server,
 		Logger:         logger,
+		Config:         ctn.Resolve("config").(interfaces.ConfigInterface),
 		AddressService: ctn.Resolve("addressService").(*service.AddressService),
 		HouseService:   ctn.Resolve("houseService").(*service.HouseImportService),
 		VersionService: ctn.Resolve("versionService").(*versionService.VersionService),
@@ -51,9 +57,12 @@ func NewGrpcServer(ctn *registry.Container) *GrpcServer {
 
 func (g *GrpcServer) Run() error {
 	wg := sync.WaitGroup{}
-	wg.Add(2)
+	wg.Add(1)
 	go g.grpcService(&wg)
-	go g.proxyService(&wg)
+	if g.Config.GetBool("grpc.gateway.enable") {
+		wg.Add(1)
+		go g.proxyService(&wg)
+	}
 	wg.Wait()
 	return nil
 }
@@ -66,17 +75,18 @@ func (g *GrpcServer) grpcService(wg *sync.WaitGroup) {
 
 	go func() {
 		oscall := <-c
-		log.Printf("system call:%+v", oscall)
+		g.Logger.Info("system call:%+v", oscall)
 		g.Server.GracefulStop()
+		os.Exit(0)
 	}()
 
 	if err := g.Serve(); err != nil {
-		log.Fatalf("failed to serve: %v", err)
+		g.Logger.Fatal("failed to serve", err)
 	}
 }
 
 func (g *GrpcServer) Serve() error {
-	listener, err := net.Listen("tcp", ":50051")
+	listener, err := net.Listen(g.Config.GetString("grpc.network"), g.Config.GetString("grpc.address"))
 	if err != nil {
 		return err
 	}
@@ -86,7 +96,7 @@ func (g *GrpcServer) Serve() error {
 
 func (g *GrpcServer) proxyService(wg *sync.WaitGroup) {
 	defer wg.Done()
-	var grpcServerEndpoint = flag.String("grpc-server-endpoint", "localhost:50051", "gRPC server endpoint")
+
 	ctx := context.Background()
 	ctx, cancel := context.WithCancel(ctx)
 	defer cancel()
@@ -95,12 +105,51 @@ func (g *GrpcServer) proxyService(wg *sync.WaitGroup) {
 	// Note: Make sure the gRPC server is running properly and accessible
 	mux := runtime.NewServeMux()
 	opts := []grpc.DialOption{grpc.WithInsecure()}
-	err := grpcHandlerAddress.RegisterAddressHandlerHandlerFromEndpoint(ctx, mux, *grpcServerEndpoint, opts)
+	err := grpcHandlerAddressV1.RegisterAddressHandlerHandlerFromEndpoint(ctx, mux, g.Config.GetString("grpc.address"), opts)
 	if err != nil {
 		g.Logger.Fatal("error reg endpoint", err)
 	}
 
 	// Start HTTP server (and proxy calls to gRPC server endpoint)
-	g.Logger.Info("Start Http server on port: 8081")
-	g.Logger.Fatal(http.ListenAndServe(":8081", mux).Error())
+	g.Logger.Info("Start Http server on: " + g.Config.GetString("grpc.gateway.address"))
+	g.Logger.Fatal(http.ListenAndServe(g.Config.GetString("grpc.gateway.address"), mux).Error())
+}
+
+func serverInterceptor(ctx context.Context,
+	req interface{},
+	info *grpc.UnaryServerInfo,
+	handler grpc.UnaryHandler) (interface{}, error) {
+	start := time.Now()
+	md, _ := metadata.FromIncomingContext(ctx)
+	var xRequestId string
+	for i, v := range md {
+		if i == "x-request-id" {
+			xRequestId = v[0]
+		}
+	}
+
+	globalLogger.WithFields(interfaces.LoggerFields{
+		"x-request-id": xRequestId,
+		"method":       info.FullMethod,
+		"request":      req,
+	}).Info("Request")
+
+	// Проверка валидации, jwt, если потребуется
+	/*if info.FullMethod != "/proto.EventStoreService/GetJWT" {
+		if err := authorize(ctx); err != nil {
+			return nil, err
+		}
+	}*/
+
+	// Calls the handler
+	h, err := handler(ctx, req)
+
+	globalLogger.WithFields(interfaces.LoggerFields{
+		"x-request-id": xRequestId,
+		"method":       info.FullMethod,
+		"response":     h,
+		"time":         time.Since(start),
+	}).Info("Response")
+
+	return h, err
 }
