# app/interfaces/grpc/proto/v1/address/address.swagger.json
@@ -11,6 +11,66 @@
     "application/json"
   ],
   "paths": {
+    "/api/v1/address/term/{term}": {
+      "get": {
+        "operationId": "AddressHandler_GetAddressByTerm",
+        "responses": {
+          "200": {
+            "description": "A successful response.(streaming responses)",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "result": {
+                  "$ref": "#/definitions/address_v1Address"
+                },
+                "error": {
+                  "$ref": "#/definitions/runtimeStreamError"
+                }
+              },
+              "title": "Stream result of address_v1Address"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "term",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "count",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "from",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          }
+        ],
+        "tags": [
+          "AddressHandler"
+        ]
+      }
+    },
     "/api/v1/address/{guid}": {
       "get": {
         "operationId": "AddressHandler_GetByGuid",
@@ -72,7 +132,7 @@
         ]
       }
     },
-    "/api/v1/citybyterm/{term}": {
+    "/api/v1/cities/term/{term}": {
       "get": {
         "operationId": "AddressHandler_GetCitiesByTerm",
         "responses": {
@@ -107,6 +167,20 @@
           },
           {
             "name": "count",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "from",
             "in": "query",
             "required": false,
             "type": "string",
